added links to pages in view.html and columns

--- a/html/view.html
+++ b/html/view.html
@@ -12,6 +12,23 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
+    <body>
+        <div class="jumbotron">
+            <h1 class="display-4 d-flex justify-content-center">Hot Restaurant</h1>
+            <p class="lead d-flex justify-content-center">Current Reservations and Waiting List</p>
+            <hr class="my-4">
+            <p></p>
+            <p class="lead d-flex justify-content-center">
+            <a class="btn btn-danger btn-lg m-1" href="make.html" role="button">Make Reservation</a>
+            <a class="btn btn-primary btn-lg m-1" href="home.html" role="button">Home</a>
+            </p>
+          </div>
+          <div class="container">
+            <div class="row m-2">
+              <div class="col border rounded">
+                <p>dude</p>
+              </div>
+              
     
 </body>
 </html>
