--- a/html/home.html
+++ b/html/home.html
@@ -18,9 +18,9 @@
         <hr class="my-4">
         <p></p>
         <p class="lead d-flex justify-content-center">
-        <a class="btn btn-primary btn-lg m-1" href="#" role="button">View Tables</a>
+        <a class="btn btn-primary btn-lg m-1 viewTable"  href="#" role="button">View Tables</a>
         
-        <a class="btn btn-danger btn-lg m-1" href="#" role="button">Make Reservation</a>
+        <a class="btn btn-danger btn-lg m-1 reservation" href="#" role="button">Make Reservation</a>
         </p>
       </div>
 </body>
