--- a/html/home.html
+++ b/html/home.html
@@ -16,11 +16,10 @@
         <h1 class="display-4 d-flex justify-content-center">Hot Restaurant</h1>
         <p class="lead d-flex justify-content-center">Book your seat before they're all gone</p>
         <hr class="my-4">
-        <p></p>
         <p class="lead d-flex justify-content-center">
-        <a class="btn btn-primary btn-lg m-1" href="#" role="button">View Tables</a>
+        <a class="btn btn-primary btn-lg m-1" href="./view.html" role="button">View Tables</a>
         
-        <a class="btn btn-danger btn-lg m-1" href="#" role="button">Make Reservation</a>
+        <a class="btn btn-danger btn-lg m-1" href="./make.html" role="button">Make Reservation</a>
         </p>
       </div>
 </body>
