--- a/html/make.html
+++ b/html/make.html
@@ -13,11 +13,13 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Hot Restaraunt</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4 d-flex justify-content-center">Hot Restaraunt</h1>
+            <p class="lead d-flex justify-content-center">Make a Reservation.</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <p class="lead d-flex justify-content-center">Type in your information to be added to the reservations list.</p>
+            <a class="btn btn-primary btn-lg m-1" href="./home.html" role="button">Home</a>
+            <a class="btn btn-primary btn-lg m-1" href="./view.html" role="button">View List of Tables</a>
+
     </div>
 
     
