--- a/html/make.html
+++ b/html/make.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Reservations</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script
     src="https://code.jquery.com/jquery-3.4.1.js"
@@ -13,13 +13,14 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1 class="display-4 d-flex justify-content-center">Hot Restaraunt</h1>
+        <h1 class="display-4 d-flex justify-content-center">Hot Restaurant</h1>
             <p class="lead d-flex justify-content-center">Make a Reservation.</p>
             <hr class="my-4">
             <p class="lead d-flex justify-content-center">Type in your information to be added to the reservations list.</p>
-            <a class="btn btn-primary btn-lg m-1" href="./home.html" role="button">Home</a>
-            <a class="btn btn-primary btn-lg m-1" href="./view.html" role="button">View List of Tables</a>
-
+            <p class="lead d-flex justify-content-center">
+                <a class="btn btn-primary btn-lg m-1" href="./home.html" role="button">Home</a>
+                <a class="btn btn-primary btn-lg m-1" href="./view.html" role="button">View List of Tables</a>
+            </p>
     </div>
 
     
