--- a/html/view.html
+++ b/html/view.html
@@ -10,6 +10,7 @@
     src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <body>
@@ -20,7 +21,7 @@
             <p></p>
             <p class="lead d-flex justify-content-center">
             <a class="btn btn-danger btn-lg m-1" href="make.html" role="button">Make Reservation</a>
-            <a class="btn btn-primary btn-lg m-1" href="home.html" role="button">Home</a>
+            <a class="btn btn-primary btn-lg m-1 fa fa-home" href="home.html" role="button">Home</a>
             </p>
           </div>
           <div class= " container border rounded">
