--- a/html/home.html
+++ b/html/home.html
@@ -10,10 +10,12 @@
     src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
+    <script src="../restaurant.js"></script>
+
 </head>
 <body>
     <div class="jumbotron">
-        <h1 class="display-4 d-flex justify-content-center">Hot Restaurant</h1>
+        <h1 class="display-4 d-flex justify-content-center"><p><span class="glyphicon glyphicon-fire"></span></p>    Hot Restaurant</h1>
         <p class="lead d-flex justify-content-center">Book your seat before they're all gone</p>
         <hr class="my-4">
         <p class="lead d-flex justify-content-center">
