--- a/html/make.html
+++ b/html/make.html
@@ -10,6 +10,8 @@
     src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
+    <script src="../restaurant.js"></script>
+
 </head>
 <body>
     <div class="jumbotron">
