--- a/html/home.html
+++ b/html/home.html
@@ -19,8 +19,8 @@
         <p class="lead d-flex justify-content-center">Book your seat before they're all gone</p>
         <hr class="my-4">
         <p class="lead d-flex justify-content-center">
-          <a class="btn btn-primary btn-lg m-1 viewTable"  href="#" role="button">View Tables</a>
-        <a class="btn btn-danger btn-lg m-1 reservation" href="#" role="button">Make Reservation</a>
+          <a class="btn btn-primary btn-lg m-1 viewTable"  href="./view.html" role="button">View Tables</a>
+        <a class="btn btn-danger btn-lg m-1 reservation" href="./make.html" role="button">Make Reservation</a>
         </p>
       </div>
 </body>
